<resources>
    <string name="app_name">PropertyPrices</string>

<!--   Registration strings-->

    <string name="first_name">First Name </string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>

    <string name="login">Sign In</string>
    <string name="new_user">Create New Account</string>

    <string name="delete_data_dialog">Do you want to delete this location?</string>
     <string name="noDataAvailable">No data available</string>




    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
</resources>