<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_centerHorizontal="true"
    android:layout_height="match_parent">



    <ScrollView
        android:layout_width="fill_parent"
        android:fillViewport="true"
        android:layout_height="fill_parent"
        tools:ignore="MissingConstraints">
    <RelativeLayout
        android:layout_width="match_parent"
        android:padding="20dp"
        android:gravity="center_vertical"
        android:layout_height="match_parent">



    <TextView
        android:text="@string/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tV_Register"
        android:textSize="25sp"
        android:textColor="#000"
        android:layout_centerHorizontal="true"
        tools:ignore="MissingConstraints" />


    <EditText
        android:id="@+id/eT_FirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:autofillHints="ok"
        android:background="@drawable/edittext_focused_style"
        android:hint="@string/first_name"
        android:layout_below="@+id/tV_Register"


        android:padding="15dp"
        android:textAlignment="textStart"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="MissingConstraints"
         />




    <EditText
        android:id="@+id/eT_LastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:autofillHints="ok"
        android:background="@drawable/edittext_focused_style"
        android:hint="@string/last_name"
        android:padding="15dp"
        android:layout_below="@+id/eT_FirstName"

        android:textAlignment="textStart"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="MissingConstraints"
        />



    <EditText
        android:id="@+id/eT_EmailId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:autofillHints="ok"
        android:background="@drawable/edittext_focused_style"
        android:hint="@string/email"
        android:padding="15dp"
        android:layout_below="@+id/eT_LastName"

        android:textAlignment="textStart"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="MissingConstraints"
        />





        <RelativeLayout
            android:layout_width="fill_parent"
            android:id="@+id/rL_password"
            android:layout_below="@+id/eT_EmailId"

            android:layout_height="wrap_content">



            <EditText
                android:id="@+id/eT_Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:autofillHints="ok"
                android:background="@drawable/edittext_focused_style"
                android:hint="@string/password"
                android:padding="15dp"
                android:inputType="textPassword"

                android:textAlignment="textStart"
                app:layout_constraintRight_toRightOf="parent"
                tools:ignore="MissingConstraints"
                />


            <ImageView
                android:id="@+id/iV_showPassword"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="5dp"
                android:alpha=".5"
                android:onClick="ShowHidePass"
                android:padding="7dp"
                android:src="@drawable/ic_hide"
                android:contentDescription="TODO" />
        </RelativeLayout>







        <RelativeLayout
            android:layout_width="fill_parent"
            android:id="@+id/rL_confirm_password"
            android:layout_below="@+id/rL_password"

            android:layout_height="wrap_content">




            <EditText
                android:id="@+id/eT_ConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:autofillHints="ok"
                android:background="@drawable/edittext_focused_style"
                android:hint="@string/confirm_password"
                android:padding="15dp"
                android:inputType="textPassword"

                android:textAlignment="textStart"
                tools:ignore="MissingConstraints"
                />


            <ImageView
                android:id="@+id/iV_confirmPassword"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="5dp"
                android:alpha=".5"
                android:onClick="ShowHidePass"
                android:padding="7dp"
                android:src="@drawable/ic_hide"
                android:contentDescription="TODO" />
        </RelativeLayout>



        <Button
            android:id="@+id/bT_Register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/button_shape"
            android:text="Sign Up"
            android:layout_below="@+id/rL_confirm_password"
            android:padding="15dp"
            android:textColor="#ffffff"
            tools:ignore="MissingConstraints" />



    <ProgressBar
        android:id="@+id/idLoadingPB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_gravity="center_vertical"
        android:layout_below="@+id/bT_Register"

        tools:ignore="MissingConstraints" />


    </RelativeLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>


