<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_centerHorizontal="true"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/iv_back"

        tools:ignore="MissingConstraints">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:padding="20dp"
            android:layout_margin="20dp"
            android:background="@drawable/ic_baseline_arrow_back"
            tools:ignore="MissingConstraints"
            android:contentDescription="TODO">

        </ImageView>
    </RelativeLayout>


    <ScrollView
        android:layout_width="fill_parent"
        android:fillViewport="true"
        android:layout_marginTop="90dp"
        android:layout_height="fill_parent"
        tools:ignore="MissingConstraints">
        <RelativeLayout
            android:layout_width="match_parent"
            android:padding="20dp"
            android:gravity="center_vertical"
            android:layout_height="match_parent">




            <EditText
                android:id="@+id/eT_FirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:autofillHints="ok"
                android:background="@drawable/edittext_focused_style"
                android:hint="@string/first_name"
                android:layout_below="@+id/tV_Register"


                android:padding="15dp"
                android:textAlignment="textStart"
                app:layout_constraintRight_toRightOf="parent"
                tools:ignore="MissingConstraints"
                />




            <EditText
                android:id="@+id/eT_LastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:autofillHints="ok"
                android:background="@drawable/edittext_focused_style"
                android:hint="@string/last_name"
                android:padding="15dp"
                android:layout_below="@+id/eT_FirstName"

                android:textAlignment="textStart"
                app:layout_constraintRight_toRightOf="parent"
                tools:ignore="MissingConstraints"
                />



            <TextView
                android:id="@+id/tv_EmailId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:autofillHints="ok"
                android:background="@drawable/edittext_focused_style"
                android:hint="@string/email"
                android:padding="15dp"
                android:layout_below="@+id/eT_LastName"

                android:textAlignment="textStart"
                app:layout_constraintRight_toRightOf="parent"
                tools:ignore="MissingConstraints"
                />















            <Button
                android:id="@+id/bT_update_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/button_shape"
                android:text="Update Profile"
                android:layout_below="@+id/tv_EmailId"
                android:padding="15dp"
                android:textColor="#ffffff"
                tools:ignore="MissingConstraints" />



            <ProgressBar
                android:id="@+id/idLoadingPB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_gravity="center_vertical"
                android:layout_below="@+id/bT_Register"

                tools:ignore="MissingConstraints" />


        </RelativeLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>


